NCSD-2401: Re-arrange project layout

--- a/DFC.App.MatchSkills.WebUI.Test/DFC.App.MatchSkills.WebUI.Test.csproj
+++ b/DFC.App.MatchSkills.WebUI.Test/DFC.App.MatchSkills.WebUI.Test.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Src\DFC.App.MatchSkills.WebUI\DFC.App.MatchSkills.WebUI.csproj" />
+    <ProjectReference Include="..\DFC.App.MatchSkills.WebUI\DFC.App.MatchSkills.WebUI.csproj" />
   </ItemGroup>
 
 </Project>
