--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -1,5 +1,5 @@
 variables:
-    SolutionBaseName: 'DFC.Composite.Shell'
+    SolutionBaseName: 'DFC.App.MatchSkills'
     BuildPlatform: 'any cpu'
     BuildConfiguration: 'release'
 
