Adds project guids to csproj files

--- a/DFC.App.MatchSkills.Application.Test/DFC.App.MatchSkills.Application.Test.csproj
+++ b/DFC.App.MatchSkills.Application.Test/DFC.App.MatchSkills.Application.Test.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-
+    <ProjectGuid>35524E5D-922C-446C-A91D-CD0D78A38BD4</ProjectGuid>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
