--- a/DFC.App.MatchSkills.Application/DFC.App.MatchSkills.Application.csproj
+++ b/DFC.App.MatchSkills.Application/DFC.App.MatchSkills.Application.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <ProjectGuid>0255C068-3F41-47B4-8D23-20A3851D302D</ProjectGuid>
   </PropertyGroup>
 
 </Project>
