--- a/DFC.App.MatchSkills.Services.Dysac.Test/DFC.App.MatchSkills.Services.Dysac.Test.csproj
+++ b/DFC.App.MatchSkills.Services.Dysac.Test/DFC.App.MatchSkills.Services.Dysac.Test.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-
+    <ProjectGuid>4B0A1D2A-96B0-4F15-8060-B7D45A165E47</ProjectGuid>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
