--- a/DFC.App.MatchSkills.Services.ServiceTaxonomy/DFC.App.MatchSkills.Services.ServiceTaxonomy.csproj
+++ b/DFC.App.MatchSkills.Services.ServiceTaxonomy/DFC.App.MatchSkills.Services.ServiceTaxonomy.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <ProjectGuid>7708B08F-BCAE-42B5-80F7-E04CF1902EA3</ProjectGuid>
   </PropertyGroup>
 
   <ItemGroup>
