--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -1,5 +1,5 @@
 variables:
-    SolutionBaseName: 'DFC.Composite.Shell'
+    SolutionBaseName: 'DFC.App.MatchSkills'
     BuildPlatform: 'any cpu'
     BuildConfiguration: 'release'
 
@@ -9,5 +9,25 @@ resources:
   - repository: dfc-devops
     type: github
     name: SkillsFundingAgency/dfc-devops
-    ref: refs/tags/v1.6.5
+    ref: refs/tags/v1.8.6
     endpoint: 'GitHub (ESFA)'
+
+
+stages:
+- stage: Build
+  displayName: Build, Test and Analyze
+  jobs:
+  - job: BuildTestAndAnalyze
+    pool:
+      name: NCS - CI and CD
+      demands:
+      - msbuild
+      - visualstudio
+    steps:
+    #  Build DFC.App.MatchSkills.WebUI
+    - template: AzureDevOpsTemplates\Build\StepTemplates\dfc-dotnetcore-build-sonar.yml@dfc-devops
+      parameters:
+        SolutionBaseName: $(SolutionBaseName).WebUI
+        BuildPlatform: 'any cpu'
+        BuildConfiguration: 'release'
+        TestSuffix: Test
