--- a/DFC.App.MatchSkills.WebUI/DFC.App.MatchSkills.WebUI.csproj
+++ b/DFC.App.MatchSkills.WebUI/DFC.App.MatchSkills.WebUI.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DFC.Personalisation.Common" Version="0.1.9" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
   </ItemGroup>
