--- a/Src/DFC.App.MatchSkills.Application/DFC.App.MatchSkills.Application.csproj
+++ b/Src/DFC.App.MatchSkills.Application/DFC.App.MatchSkills.Application.csproj
@@ -1,7 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="DFC.Personalisation.Domain" Version="0.1.5" />
+  </ItemGroup>
 
 </Project>
