--- a/Src/DFC.App.MatchSkills.Services.ServiceTaxonomy/DFC.App.MatchSkills.Services.ServiceTaxonomy.csproj
+++ b/Src/DFC.App.MatchSkills.Services.ServiceTaxonomy/DFC.App.MatchSkills.Services.ServiceTaxonomy.csproj
@@ -1,8 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="DFC.Personalisation.Common" Version="0.1.9" />
+    <PackageReference Include="DFC.Personalisation.Domain" Version="0.1.5" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DFC.App.MatchSkills.Application\DFC.App.MatchSkills.Application.csproj" />
