--- a/DFC.App.MatchSkills.Services.Dysac.Test/DFC.App.MatchSkills.Services.Dysac.Test.csproj
+++ b/DFC.App.MatchSkills.Services.Dysac.Test/DFC.App.MatchSkills.Services.Dysac.Test.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="DFC.Personalisation.Common" Version="0.1.12" />
+    <PackageReference Include="Dfc.ProviderPortal.Packages" Version="0.1.1" />
     <PackageReference Include="FluentAssertions" Version="4.17.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.0" />
     <PackageReference Include="NSubstitute" Version="4.2.1" />
