--- a/DFC.App.MatchSkills.Services.Dysac/DFC.App.MatchSkills.Services.Dysac.csproj
+++ b/DFC.App.MatchSkills.Services.Dysac/DFC.App.MatchSkills.Services.Dysac.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="DFC.Personalisation.Common" Version="0.1.12" />
+    <PackageReference Include="Dfc.ProviderPortal.Packages" Version="0.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.0" />
     <PackageReference Include="NSubstitute" Version="4.2.1" />
   </ItemGroup>
