--- a/DFC.App.MatchSkills.Services.JobProfile.Test/DFC.App.MatchSkills.Services.JobProfile.Test.csproj
+++ b/DFC.App.MatchSkills.Services.JobProfile.Test/DFC.App.MatchSkills.Services.JobProfile.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -7,14 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DFC.Personalisation.Common" Version="0.1.12" />
+    <PackageReference Include="Dfc.ProviderPortal.Packages" Version="0.1.1" />
+    <PackageReference Include="FluentAssertions" Version="4.17.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.0" />
+    <PackageReference Include="NSubstitute" Version="4.2.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Integration\" />
-    <Folder Include="Unit\" />
+    <ProjectReference Include="..\DFC.App.MatchSkills.Services.JobProfile\DFC.App.MatchSkills.Services.JobProfile.csproj" />
   </ItemGroup>
 
 </Project>
