--- a/DFC.App.MatchSkills.Services.JobProfile/DFC.App.MatchSkills.Services.JobProfile.csproj
+++ b/DFC.App.MatchSkills.Services.JobProfile/DFC.App.MatchSkills.Services.JobProfile.csproj
@@ -9,4 +9,15 @@
     <ProjectReference Include="..\DFC.App.MatchSkills.Application\DFC.App.MatchSkills.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="DFC.Personalisation.Common" Version="0.1.12" />
+    <PackageReference Include="Dfc.ProviderPortal.Packages" Version="0.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
 </Project>
