--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -37,3 +37,4 @@ stages:
         BuildPlatform: 'any cpu'
         BuildConfiguration: 'release'
         TestSuffix: Test
+        PublishWebApp: true
