--- a/DFC.App.MatchSkills.Services.ServiceTaxonomy.Test/DFC.App.MatchSkills.Services.ServiceTaxonomy.Test.csproj
+++ b/DFC.App.MatchSkills.Services.ServiceTaxonomy.Test/DFC.App.MatchSkills.Services.ServiceTaxonomy.Test.csproj
@@ -8,12 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
-    <PackageReference Include="DFC.Personalisation.Common" Version="0.1.11" />
+    <PackageReference Include="DFC.Personalisation.Common" Version="0.1.12" />
     <PackageReference Include="DFC.Personalisation.Domain" Version="0.1.6" />
     <PackageReference Include="FluentAssertions" Version="5.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.SlowCheetah" Version="3.2.26">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
