--- a/DFC.App.MatchSkills.Services.Dysac.Test/DFC.App.MatchSkills.Services.Dysac.Test.csproj
+++ b/DFC.App.MatchSkills.Services.Dysac.Test/DFC.App.MatchSkills.Services.Dysac.Test.csproj
@@ -7,13 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DFC.Personalisation.Common" Version="0.1.13" />
+    <PackageReference Include="DFC.Personalisation.Common" Version="0.1.12" />
     <PackageReference Include="FluentAssertions" Version="4.17.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.0" />
     <PackageReference Include="NSubstitute" Version="4.2.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.16.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
   </ItemGroup>
 
   <ItemGroup>
