--- a/DFC.App.MatchSkills.Services.ServiceTaxonomy.Test/DFC.App.MatchSkills.Services.ServiceTaxonomy.Test.csproj
+++ b/DFC.App.MatchSkills.Services.ServiceTaxonomy.Test/DFC.App.MatchSkills.Services.ServiceTaxonomy.Test.csproj
@@ -38,6 +38,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="appsettings.Debug.json">
+      <IsTransformFile>true</IsTransformFile>
+      <DependentUpon>appsettings.json</DependentUpon>
+    </None>
     <None Update="appsettings.json">
       <TransformOnBuild>true</TransformOnBuild>
     </None>
