--- a/DFC.App.MatchSkills.Services.Dysac/DFC.App.MatchSkills.Services.Dysac.csproj
+++ b/DFC.App.MatchSkills.Services.Dysac/DFC.App.MatchSkills.Services.Dysac.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <ProjectGuid>596AC70A-ACBE-4CBC-B7A0-30B9DC0EA91C</ProjectGuid>
   </PropertyGroup>
 
