--- a/DFC.App.MatchSkills.WebUI/appsettings-template.json
+++ b/DFC.App.MatchSkills.WebUI/appsettings-template.json
@@ -7,8 +7,10 @@
     }
   },
   "ServiceTaxonomySettings": {
-    "ApiUrl": "http://localhost:49983",
-    "ApiKey": "----"
+    "ApiUrl": "https://dev.api.nationalcareersservice.org.uk/servicetaxonomy",
+    "ApiKey": "----",
+    "SearchOccupationInAltLabels": "true",
+    "SearchSkillInAltLabels": "true"
   }
   
 }
