--- a/DFC.App.MatchSkills.Services.JobProfile.Test/DFC.App.MatchSkills.Services.JobProfile.Test.csproj
+++ b/DFC.App.MatchSkills.Services.JobProfile.Test/DFC.App.MatchSkills.Services.JobProfile.Test.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <ProjectGuid>71EC0B4D-F7D9-4B68-BD23-E841791B7CD8</ProjectGuid>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
