--- a/DFC.App.MatchSkills.Services.JobProfile/DFC.App.MatchSkills.Services.JobProfile.csproj
+++ b/DFC.App.MatchSkills.Services.JobProfile/DFC.App.MatchSkills.Services.JobProfile.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <ProjectGuid>572F6E98-2833-4C2B-B7EC-DD8A916336AC</ProjectGuid>
   </PropertyGroup>
 
