--- a/DFC.App.MatchSkills.WebUI.Test/DFC.App.MatchSkills.WebUI.Test.csproj
+++ b/DFC.App.MatchSkills.WebUI.Test/DFC.App.MatchSkills.WebUI.Test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <ProjectGuid>8FEF91F3-D8BE-4606-A9DE-4AC03466C0F6</ProjectGuid>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -26,11 +26,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DFC.Personalisation.Common" Version="0.1.13" />
+    <PackageReference Include="DFC.Personalisation.CommonUI" Version="0.2.6" />
     <PackageReference Include="FluentAssertions" Version="5.10.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.17" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
+    <PackageReference Include="NUnit.Console" Version="3.10.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
