--- a/DFC.App.MatchSkills.WebUI/DFC.App.MatchSkills.WebUI.csproj
+++ b/DFC.App.MatchSkills.WebUI/DFC.App.MatchSkills.WebUI.csproj
@@ -1,13 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <ProjectGuid>31145A33-689B-48B4-BC2F-2CCD1FC191D8</ProjectGuid>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="DFC.Personalisation.Common" Version="0.1.13" />
-    <PackageReference Include="DFC.Personalisation.CommonUI" Version="0.2.5" />
+    <PackageReference Include="DFC.Personalisation.CommonUI" Version="0.2.6" />
+    <PackageReference Include="DFC.Personalisation.Domain" Version="0.1.6" />
     <PackageReference Include="Dfc.ProviderPortal.Packages" Version="0.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.1" />
@@ -22,6 +23,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
