Attempts to force dotnet core v3.1 on the pipeline

--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -38,3 +38,4 @@ stages:
         BuildConfiguration: 'release'
         TestSuffix: Test
         PublishWebApp: true
+        DotNetCoreVersion: '3.1.100'
