--- a/DFC.App.MatchSkills.Test/DFC.App.MatchSkills.Test.csproj
+++ b/DFC.App.MatchSkills.Test/DFC.App.MatchSkills.Test.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="DFC.Personalisation.CommonUI" Version="0.2.9" />
     <PackageReference Include="FluentAssertions" Version="5.10.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.17" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
