--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -11,6 +11,10 @@
     "ApiKey": "----",
     "SearchOccupationInAltLabels": "true",
     "SearchSkillInAltLabels": "true"
+  },
+  "DysacServiceSettings": {
+    "ApiUrl": "https://lab.api.nationalcareersservice.org.uk/",
+    "ApiKey": "----"
   }
-  
+
 }
