Added search service setting

--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -10,7 +10,8 @@
     "ApiUrl": "https://dev.api.nationalcareersservice.org.uk/servicetaxonomy",
     "ApiKey": "----",
     "SearchOccupationInAltLabels": "true",
-    "SearchSkillInAltLabels": "true"
+    "SearchSkillInAltLabels": "true",
+    "SearchService": "https://localhost:44392/OccupationSearch/"
   }
   
 }
