--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -12,6 +12,8 @@
     "SearchOccupationInAltLabels": "true",
     "SearchSkillInAltLabels": "true",
     "SearchService": "https://localhost:44392/OccupationSearch/"
+  },
+  "CompositeSettings": {
+    "Path": "/matchskills"
   }
-  
 }
