--- a/DFC.App.MatchSkills.Application.Test/DFC.App.MatchSkills.Application.Test.csproj
+++ b/DFC.App.MatchSkills.Application.Test/DFC.App.MatchSkills.Application.Test.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.0" />
+    <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
       <PrivateAssets>all</PrivateAssets>
@@ -17,7 +19,11 @@
 
   <ItemGroup>
     <Folder Include="Integration\" />
-    <Folder Include="Unit\" />
+    <Folder Include="Unit\Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DFC.App.MatchSkills.Application\DFC.App.MatchSkills.Application.csproj" />
   </ItemGroup>
 
 </Project>
