End of day commit

--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -15,5 +15,14 @@
   },
   "CompositeSettings": {
     "Path": "/matchskills"
+  },
+  "CosmosSettings": {
+    "ApiUrl": "ApiUrl",
+    "ApiKey": "ApiKey",
+    "DatabaseName": "DatabaseName",
+    "UserSessionsCollection": "UserSessionsCollection"
+  },
+  "SessionSettings": {
+    "Salt": "BatteryHorseStapleCorrect" 
   }
 }
