--- a/DFC.App.MatchSkills.Test/DFC.App.MatchSkills.Test.csproj
+++ b/DFC.App.MatchSkills.Test/DFC.App.MatchSkills.Test.csproj
@@ -46,4 +46,8 @@
     <ProjectReference Include="..\DFC.App.MatchSkills\DFC.App.MatchSkills.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Unit\Models\" />
+  </ItemGroup>
+
 </Project>
