Updated appsettings template for the occupation search URL

--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -11,7 +11,7 @@
     "ApiKey": "----",
     "SearchOccupationInAltLabels": "true",
     "SearchSkillInAltLabels": "true",
-    "SearchService": "https://localhost:44392/OccupationSearch/"
+    "SearchService": "https://localhost:44392"
   },
   "CompositeSettings": {
     "Path": "/matchskills"
