--- a/DFC.App.MatchSkills.Application.Test/DFC.App.MatchSkills.Application.Test.csproj
+++ b/DFC.App.MatchSkills.Application.Test/DFC.App.MatchSkills.Application.Test.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
+    <PackageReference Include="NSubstitute" Version="4.2.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
       <PrivateAssets>all</PrivateAssets>
@@ -19,7 +20,6 @@
 
   <ItemGroup>
     <Folder Include="Integration\" />
-    <Folder Include="Unit\Services\" />
   </ItemGroup>
 
   <ItemGroup>
