--- a/DFC.App.MatchSkills.Test/DFC.App.MatchSkills.Test.csproj
+++ b/DFC.App.MatchSkills.Test/DFC.App.MatchSkills.Test.csproj
@@ -31,4 +31,10 @@
     <Folder Include="Unit\Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
