--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -11,7 +11,8 @@
     "ApiKey": "----",
     "SearchOccupationInAltLabels": "true",
     "SearchSkillInAltLabels": "true",
-    "SearchService": "https://localhost:44392"
+    "SearchService": "https://localhost:44392",
+    "EscoUrl": "http://data.europa.eu/esco"
   },
   "CompositeSettings": {
     "Path": "/matchskills"
