--- a/DFC.App.MatchSkills.Services.ServiceTaxonomy.Test/DFC.App.MatchSkills.Services.ServiceTaxonomy.Test.csproj
+++ b/DFC.App.MatchSkills.Services.ServiceTaxonomy.Test/DFC.App.MatchSkills.Services.ServiceTaxonomy.Test.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <None Update="appsettings.json">
       <TransformOnBuild>true</TransformOnBuild>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="appsettings.Release.json">
       <IsTransformFile>true</IsTransformFile>
