Hooking up career match search in Service Taxonomy

--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -12,7 +12,8 @@
     "SearchOccupationInAltLabels": "true",
     "SearchSkillInAltLabels": "true",
     "SearchService": "https://localhost:44392",
-    "EscoUrl": "http://data.europa.eu/esco"
+    "EscoUrl": "http://data.europa.eu/esco",
+    "MinimumMatchingSkills":  "4", 
   },
   "CompositeSettings": {
     "Path": "/matchskills"
