--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -13,7 +13,7 @@
     "SearchSkillInAltLabels": "true",
     "SearchService": "https://localhost:44392",
     "EscoUrl": "http://data.europa.eu/esco",
-    "MinimumMatchingSkills":  "4", 
+    "MinimumMatchingSkills": "4"
   },
   "CompositeSettings": {
     "Path": "/matchskills"
@@ -25,6 +25,9 @@
     "UserSessionsCollection": "UserSessionsCollection"
   },
   "SessionSettings": {
-    "Salt": "BatteryHorseStapleCorrect" 
+    "Salt": "BatteryHorseStapleCorrect"
+  },
+  "PageSettings": {
+    "PageSize": "10"
   }
 }
