--- a/DFC.App.MatchSkills.Application/DFC.App.MatchSkills.Application.csproj
+++ b/DFC.App.MatchSkills.Application/DFC.App.MatchSkills.Application.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DFC.Personalisation.Common" Version="0.1.14" />
     <PackageReference Include="DFC.Personalisation.Domain" Version="0.1.10" />
     <PackageReference Include="Dfc.ProviderPortal.Packages" Version="0.1.1" />
     <PackageReference Include="Hashids.net" Version="1.3.0" />
