Ms 280 select all skills (#158)
* WIP

* wip

* Added CDN handling

--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -16,7 +16,8 @@
     "MinimumMatchingSkills": "4"
   },
   "CompositeSettings": {
-    "Path": "/matchskills"
+    "Path": "/matchskills",
+    "CDN": "" 
   },
   "CosmosSettings": {
     "ApiUrl": "ApiUrl",
