--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -11,13 +11,13 @@
     "ApiKey": "----",
     "SearchOccupationInAltLabels": "true",
     "SearchSkillInAltLabels": "true",
-    "SearchService": "https://localhost:44392",
+    "SearchService": "https://dev.api.nationalcareersservice.org.uk/matchskills/OccupationSearchAuto",
     "EscoUrl": "http://data.europa.eu/esco",
     "MinimumMatchingSkills": "4"
   },
   "CompositeSettings": {
     "Path": "/matchskills",
-    "CDN": "" 
+    "CDN": "https://dev-cdn.nationalcareersservice.org.uk"
   },
   "CosmosSettings": {
     "ApiUrl": "ApiUrl",
