--- a/DFC.App.MatchSkills/DFC.App.MatchSkills.csproj
+++ b/DFC.App.MatchSkills/DFC.App.MatchSkills.csproj
@@ -45,4 +45,6 @@
     <Folder Include="Extensions\" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
