--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -30,5 +30,8 @@
   },
   "PageSettings": {
     "PageSize": "10"
+  },
+  "LmiSettings": {
+    "ApiUrl": "http://api.lmiforall.org.uk/api/v1/"
   }
 }
