--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -25,8 +25,8 @@
     "DatabaseName": "DatabaseName",
     "UserSessionsCollection": "UserSessionsCollection"
   },
-  "SessionSettings": {
-    "Salt": "BatteryHorseStapleCorrect"
+  "SessionConfig": {
+    "ApplicationName": "matchskills"
   },
   "PageSettings": {
     "PageSize": "10"
