--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -33,5 +33,10 @@
   },
   "LmiSettings": {
     "ApiUrl": "http://api.lmiforall.org.uk/api/v1/"
+  },
+  "DysacSettings": {
+    "ApiUrl": "https://dev.api.nationalcareersservice.org.uk",
+    "ApiKey": "somekey",
+    "DysacUrl": "https://discover-skills-careers-dev.nationalcareersservice.org.uk/assessment/short/"
   }
 }
