Added tests and removed redundant code

--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -35,8 +35,8 @@
     "ApiUrl": "http://api.lmiforall.org.uk/api/v1/"
   },
   "DysacSettings": {
-    "ApiUrl": "https://dev.api.nationalcareersservice.org.uk",
-    "ApiKey": "somekey",
-    "DysacUrl": "https://discover-skills-careers-dev.nationalcareersservice.org.uk/assessment/short/"
+    "ApiUrl": "https://dev.api.nationalcareersservice.org.uk/discover-your-skills-careers/",
+    "ApiKey": "",
+    "DysacUrl": "/discover-your-skills-careers/assessment/short/"
   }
 }
