--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -23,7 +23,8 @@
     "ApiUrl": "ApiUrl",
     "ApiKey": "ApiKey",
     "DatabaseName": "DatabaseName",
-    "UserSessionsCollection": "UserSessionsCollection"
+    "UserSessionsCollection": "UserSessionsCollection",
+    "LmiDataCollection": "LmiData"
   },
   "SessionConfig": {
     "ApplicationName": "matchskills"
