--- a/DFC.App.MatchSkills.Test/DFC.App.MatchSkills.Test.csproj
+++ b/DFC.App.MatchSkills.Test/DFC.App.MatchSkills.Test.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="DFC.Personalisation.Common" Version="0.1.14" />
-    <PackageReference Include="DFC.Personalisation.CommonUI" Version="0.2.26" />
+    <PackageReference Include="DFC.Personalisation.CommonUI" Version="0.2.28" />
     <PackageReference Include="FluentAssertions" Version="5.10.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.21" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
@@ -21,6 +21,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="NWebsec.AspNetCore.Mvc.TagHelpers" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
