--- a/DFC.App.MatchSkills.Services.Dysac.Test/DFC.App.MatchSkills.Services.Dysac.Test.csproj
+++ b/DFC.App.MatchSkills.Services.Dysac.Test/DFC.App.MatchSkills.Services.Dysac.Test.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="DFC.Personalisation.Common" Version="0.1.14" />
     <PackageReference Include="FluentAssertions" Version="4.17.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.2" />
