--- a/DFC.App.MatchSkills.Services.Dysac/DFC.App.MatchSkills.Services.Dysac.csproj
+++ b/DFC.App.MatchSkills.Services.Dysac/DFC.App.MatchSkills.Services.Dysac.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="DFC.Personalisation.Common" Version="0.1.14" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.2" />
     <PackageReference Include="NSubstitute" Version="4.2.1" />
