--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -38,6 +38,7 @@
   "DysacSettings": {
     "ApiUrl": "https://dev.api.nationalcareersservice.org.uk/discover-your-skills-careers/",
     "ApiKey": "",
-    "DysacUrl": "/discover-your-skills-careers/assessment/short/"
+    "DysacUrl": "/discover-your-skills-careers/assessment/short/",
+    "DysacSaveUrl":  "#"
   }
 }
