--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -1,4 +1,7 @@
 {
+  "ApplicationInsights": {
+    "InstrumentationKey": "key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
@@ -39,6 +42,6 @@
     "ApiUrl": "https://dev.api.nationalcareersservice.org.uk/discover-your-skills-careers/",
     "ApiKey": "",
     "DysacUrl": "/discover-your-skills-careers/assessment/short/",
-    "DysacSaveUrl":  "#"
+    "DysacSaveUrl": "#"
   }
 }
