Return to assessment

--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -42,7 +42,12 @@
     "ApiUrl": "https://dev.api.nationalcareersservice.org.uk/discover-your-skills-careers/",
     "ApiKey": "",
     "DysacUrl": "/discover-your-skills-careers/assessment/short/",
-    "DysacSaveUrl": "#",
-    "DysacReturnUrl": "https://dfc-dev-compui-shell-as.azurewebsites.net/discover-your-skills-careers/assessment/return"
+    "DysacSaveUrl": "/discover-your-skills-careers/Assessment/save",
+    "DysacReturnUrl": "/discover-your-skills-careers/assessment/return",
+    "ApiVersion": "v1"
+  },
+  "OldDysacSettings": {
+    "ApiKey": "",
+    "AssessmentApiUrl": "https://dev.api.nationalcareersservice.org.uk/assessments/api/assessment/"
   }
 }
