--- a/DFC.App.MatchSkills.Application/DFC.App.MatchSkills.Application.csproj
+++ b/DFC.App.MatchSkills.Application/DFC.App.MatchSkills.Application.csproj
@@ -6,13 +6,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DFC.Personalisation.Common" Version="0.1.17" />
     <PackageReference Include="DFC.Personalisation.Domain" Version="0.1.11" />
     <PackageReference Include="Dfc.ProviderPortal.Packages" Version="0.1.1" />
     <PackageReference Include="Dfc.Session" Version="0.3.4" />
     <PackageReference Include="Hashids.net" Version="1.3.0" />
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.7.0" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.6.0" />
+    <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="DFC.Personalisation.Common">
+      <HintPath>..\..\dfc-personalisation-common-pkg-netcore\DFC.Personalisation.Common\bin\Debug\netcoreapp3.0\DFC.Personalisation.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
