--- a/DFC.App.MatchSkills.Services.Dysac.Test/DFC.App.MatchSkills.Services.Dysac.Test.csproj
+++ b/DFC.App.MatchSkills.Services.Dysac.Test/DFC.App.MatchSkills.Services.Dysac.Test.csproj
@@ -8,7 +8,6 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
-    <PackageReference Include="DFC.Personalisation.Common" Version="0.1.17" />
     <PackageReference Include="FluentAssertions" Version="4.17.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.3" />
     <PackageReference Include="NSubstitute" Version="4.2.1" />
@@ -23,6 +22,12 @@
   <ItemGroup>
     <ProjectReference Include="..\DFC.App.MatchSkills.Application\DFC.App.MatchSkills.Application.csproj" />
     <ProjectReference Include="..\DFC.App.MatchSkills.Services.Dysac\DFC.App.MatchSkills.Services.Dysac.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="DFC.Personalisation.Common">
+      <HintPath>..\..\dfc-personalisation-common-pkg-netcore\DFC.Personalisation.Common\bin\Debug\netcoreapp3.0\DFC.Personalisation.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
