--- a/DFC.App.MatchSkills/DFC.App.MatchSkills.csproj
+++ b/DFC.App.MatchSkills/DFC.App.MatchSkills.csproj
@@ -7,7 +7,6 @@
 
 
   <ItemGroup>
-    <PackageReference Include="DFC.Personalisation.Common" Version="0.1.17" />
     <PackageReference Include="DFC.Personalisation.CommonUI" Version="0.2.28" />
     <PackageReference Include="DFC.Personalisation.Domain" Version="0.1.11" />
     <PackageReference Include="Dfc.ProviderPortal.Packages" Version="0.1.1" />
@@ -37,6 +36,12 @@
     <ProjectReference Include="..\DFC.App.MatchSkills.Application\DFC.App.MatchSkills.Application.csproj" />
     <ProjectReference Include="..\DFC.App.MatchSkills.Services.Dysac\DFC.App.MatchSkills.Services.Dysac.csproj" />
     <ProjectReference Include="..\DFC.App.MatchSkills.Services.ServiceTaxonomy\DFC.App.MatchSkills.Services.ServiceTaxonomy.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="DFC.Personalisation.Common">
+      <HintPath>..\..\dfc-personalisation-common-pkg-netcore\DFC.Personalisation.Common\bin\Debug\netcoreapp3.0\DFC.Personalisation.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
