--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -30,7 +30,7 @@
     "LmiDataCollection": "LmiData"
   },
   "SessionConfig": {
-    "ApplicationName": "matchskills"
+    "ApplicationName": "session"
   },
   "PageSettings": {
     "PageSize": "10"
