Updated to page registration

--- a/DFC.App.MatchSkills/appsettings-template.json
+++ b/DFC.App.MatchSkills/appsettings-template.json
@@ -51,5 +51,8 @@
     "ApiKey": "",
     "AssessmentApiUrl": "https://dev.api.nationalcareersservice.org.uk/assessments/api/assessment/",
     "DysacResultsUrl": "https://dev.api.nationalcareersservice.org.uk/results/api/result/"
+  },
+  "Configuration": {
+    "ApplicationName": "DFC.App.MatchSkills"
   }
 }
